--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,10 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <title></title>
   </head>
   <body>
+    <header>
+      <div class='header-content-block'>
+        <div class='header-title-block'>
+          <h1>Damn<br />Funny<br />People</h1>
+        </div>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
